# pcre2cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  LICENSE  README.md  install_test.bat  make_single_header.bat  make_single_lib.bat  pcre2cpp.sln
benchmark/: CMakeLists.txt  main.cpp  pch.hpp
cmake/: clang_tidy.cmake  coverage_report.cmake  doxygen.cmake  get_cpm.cmake  pcre2cppConfig.cmake.in  run_clang_tidy.cmake  third_party.cmake
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_43b6250c005abea9ca558cf50d077621.html  dir_43b6250c005abea9ca558cf50d077621.js  dir_43b6250c005abea9ca558cf50d077621_dep.map  dir_43b6250c005abea9ca558cf50d077621_dep.md5  dir_4629d3f6362ddd95c89641c727910142.html  dir_4629d3f6362ddd95c89641c727910142.js  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.js  dir_82c96e3590c544f5c512bcdae777a2e3.html  dir_82c96e3590c544f5c512bcdae777a2e3.js  dir_bf0675da38f414b037d67b7f2ad3611c.html  dir_bf0675da38f414b037d67b7f2ad3611c.js  dir_c81bedbdc4d2785e1b4798911884f4c7.html  dir_c81bedbdc4d2785e1b4798911884f4c7.js  dir_c86e4a33888730d1ec79aa4755e22bd0.html  dir_c86e4a33888730d1ec79aa4755e22bd0.js  dir_e42c590ce6f06ecc5d52161ede5c7f44.html  dir_e42c590ce6f06ecc5d52161ede5c7f44.js  dir_f1c861f3cfd6e1fbce1e14040c571686.html  dir_f1c861f3cfd6e1fbce1e14040c571686.js  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+32 more)
docs/html/d0/db1/: structpcre2cpp_1_1sub__match__value__coll__graph.map  structpcre2cpp_1_1sub__match__value__coll__graph.md5
docs/html/d0/dc3/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__8_01_4__inherit__graph.map  structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__8_01_4__inherit__graph.md5
docs/html/d1/d3f/: match__result_8hpp.html  match__result_8hpp.js  match__result_8hpp_source.html  namespacepcre2cpp_1_1utils.html  namespacepcre2cpp_1_1utils.js
docs/html/d1/d48/: structpcre2cpp_1_1basic__match__value__inherit__graph.map  structpcre2cpp_1_1basic__match__value__inherit__graph.md5
docs/html/d1/d85/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__32_01_4.html  structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__32_01_4.js
docs/html/d1/d9f/: classpcre2cpp_1_1basic__match__result.html  classpcre2cpp_1_1basic__match__result.js
docs/html/d1/ddd/: structpcre2cpp_1_1basic__match__value-members.html
docs/html/d2/d54/: assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html
docs/html/d2/ddc/: one__header__maker_8py.html  one__header__maker_8py.js
docs/html/d2/df4/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__8_01_4-members.html
docs/html/d3/d73/: classpcre2cpp_1_1basic__regex__exception-members.html
docs/html/d4/d1f/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__32_01_4-members.html
docs/html/d4/dd3/: structpcre2cpp_1_1basic__match__result_1_1__value__result__data-members.html
docs/html/d4/df2/: structpcre2cpp_1_1sub__match__value.html  structpcre2cpp_1_1sub__match__value.js
docs/html/d5/d60/: classpcre2cpp_1_1basic__match__result-members.html
docs/html/d5/d7b/: match__error__codes_8hpp.html  match__error__codes_8hpp.js  match__error__codes_8hpp_source.html
docs/html/d5/d82/: libs_8hpp.html  libs_8hpp.js  libs_8hpp_source.html
docs/html/d5/dab/: classpcre2cpp_1_1basic__match__result__exception.html  classpcre2cpp_1_1basic__match__result__exception.js
docs/html/d6/d18/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__32_01_4__coll__graph.map  structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__32_01_4__coll__graph.md5
docs/html/d6/d29/: classpcre2cpp_1_1basic__pcre2cpp__exception__inherit__graph.map  classpcre2cpp_1_1basic__pcre2cpp__exception__inherit__graph.md5
docs/html/d6/d32/: classpcre2cpp_1_1basic__regex__exception__coll__graph.map  classpcre2cpp_1_1basic__regex__exception__coll__graph.md5
docs/html/d6/d6f/: regex_8hpp.html  regex_8hpp.js  regex_8hpp_source.html
docs/html/d6/d82/: structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__8_01_4.html  structpcre2cpp_1_1utils_1_1pcre2__data_3_01utf__type_1_1_u_t_f__8_01_4.js
docs/html/d8/dfd/: config_8hpp.html  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  (+38 more)
include/: match_result.hpp  pcre2_data.hpp  pcre2cpp.hpp  pcre2cpp_config.hpp  pcre2cpp_libs.hpp  pcre2cpp_types.hpp  regex.hpp  regex_exception.hpp
include/pcre2cpp/: match_result.hpp  pcre2_data.hpp  pcre2cpp.hpp  pcre2cpp_config.hpp  pcre2cpp_exceptions.hpp  pcre2cpp_libs.hpp  pcre2cpp_types.hpp  regex.hpp  regex_compile_options.hpp  regex_exception.hpp  regex_match_options.hpp
lib/: pcre2-8-static.lib  pcre2-posix-static.lib
pcre2cpp/: CMakeLists.txt
pcre2cpp/include/pcre2cpp/: config.hpp  libs.hpp  pch.hpp  pcre2cpp.hpp  types.hpp
pcre2cpp/include/pcre2cpp/exceptions/: exceptions.hpp
pcre2cpp/include/pcre2cpp/match/: match_error_codes.hpp  match_options.hpp  match_result.hpp
pcre2cpp/include/pcre2cpp/regex/: compile_options.hpp  regex.hpp  regex_compile_options.hpp  regex_match_options.hpp
pcre2cpp/include/pcre2cpp/utils/: assert.hpp  pcre2_data.hpp
src/: framework.hpp  pch.cpp  pch.hpp  pcre2cpp.vcxproj  pcre2cpp.vcxproj.filters  regex.cpp
tests/: CMakeLists.txt  pch.hpp  tests.cpp
tools/one header maker/: one_header_maker.py
(+84 files in other folders)
